# claude-code-vision

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI_SETUP.md  PRODUCTION_SMOKE_TEST.md  PR_DRAFT.md  QUICKSTART_DEMO.md  README.md  VISION_SETUP.md  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.specify/memory/: constitution.md
docs/: release-checklist.md
docs/plans/: 2026-02-13-test-hardening-and-release-checklist.md
scripts/: smoke_test.sh
specs/002-claude-code-vision/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-claude-code-vision/checklists/: requirements.md
specs/002-claude-code-vision/contracts/: README.md  screenshot-service.py
src/: __init__.py
src/cli/: add_privacy_zone_command.py  doctor_command.py  init_command.py  list_monitors_command.py  main.py  test_capture_command.py  validate_config_command.py  vision_area_command.py  vision_auto_command.py  vision_command.py  vision_stop_command.py
src/interfaces/: screenshot_service.py
src/lib/: default_config.yaml  desktop_detector.py  exceptions.py  logging_config.py  tool_detector.py
src/models/: entities.py
src/services/: claude_api_client.py  config_manager.py  gemini_api_client.py  image_processor.py  monitoring_session_manager.py  temp_file_manager.py  vision_service.py
src/services/region_selector/: coordinate_selector.py  factory.py  slurp_selector.py  xrectsel_selector.py
src/services/screenshot_capture/: factory.py  imagemagick_capture.py  wayland_capture.py  x11_capture.py
tests/contract/: test_claude_api_client.py  test_image_processor.py  test_monitoring_session_manager.py  test_region_selector.py  test_screenshot_capture.py  test_vision_service.py
tests/integration/: test_first_use_prompt.py  test_monitoring_idle_pause.py  test_monitoring_max_duration.py  test_privacy_zones.py  test_vision_area_command.py  test_vision_auto_command.py  test_vision_command.py
tests/unit/: test_capture_region.py  test_claude_api_client_unit.py  test_config_manager.py  test_desktop_detector.py  test_gemini_api_client.py  test_image_processor_branches.py  test_logging_config.py  test_monitoring_session.py  test_monitoring_session_manager_core.py  test_monitoring_session_manager_idle.py  test_privacy_zone.py  test_screenshot_capture_factory.py  test_temp_file_manager.py  test_tool_detector.py  test_vision_command_service_factory.py  test_vision_service_core.py
